--- a/obrigado.html
+++ b/obrigado.html
@@ -45,7 +45,7 @@
     <main>
     <h1>OBRIGADA PELO CONTATO!</h1>
     <p>Em breve, responderei sua mensagem!</p>
-    <a href="carolsm2.html" class="btn" style="text-decoration: none; font-size: 25px;">
+    <a href="index.html" class="btn" style="text-decoration: none; font-size: 25px;">
         HOME
     </a>
     </main>
