--- a/index.html
+++ b/index.html
@@ -985,12 +985,12 @@
             </h5>
             <span>
               <a href="https://www.instagram.com/carolinebandeira.sm?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
-                <instagram.svg" alt="Ícone Instagram" width="53" height="53">
+                <img src="instagram.svg" alt="Ícone Instagram" width="53" height="53">
               </a>
             </span>
             <span>
               <a href="https://www.linkedin.com/in/caroline-bandeira-6a074268/" target="_blank">
-                <linkedin.svg" alt="Ícone LinkedIn" width="53" height="53">
+                <img src="linkedin.svg" alt="Ícone LinkedIn" width="53" height="53">
               </a>
               
             </span>
