--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
             
             <form id="formulario" action="https://api.staticforms.xyz/submit" method="POST">
               <input type="hidden" name="accessKey" value="ad039424-2127-43fb-8137-d44f3fa88615">
-              <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/obrigado.html">
+              <input type="hidden" name="redirectTo" value="https://robertateixeiradev.github.io/carol-obrigada/">
               
               <label>Nome</label>
               <input id="caixa" type="text" required name="name" placeholder="Digite seu nome..." autocomplete="off">
