--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         margin: 0;
         padding: 0;
         min-width: 320dp;
+           width:100%;
        }
        body{
         background-color: #F6E8CD;
@@ -26,6 +27,7 @@
         align-items: center;
         padding: 0;
         margin: 0;
+           width: 100%;
        }
 
        .btn-arrow{
@@ -371,59 +373,77 @@
     }
 }
 
+#aut{
+ background-color: #E3D6BD;
+ width: 100%;
+ height: 100%;
+ gap: 2rem;
+padding: 3.1rem;
+}
 .especial-section{
+  gap: 6rem;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  margin: 0;
-  left: 0;
-  width: 100%;
-}
-.especial-section h1, h4{
-  font-family: Inter, sans-serif;
-}
-.especial-section h4{
-  padding: 15px;
-  gap: 2rem;
   
+  margin-top: 3rem;
+  align-items: center;
+  min-width: 320dp;
+  flex-direction: row;
+}
+#aut h1, p{
+  font-family: Inter, sans-serif;
+  margin-left: 1.3rem;
+  letter-spacing: 3px;
+}
+#aut h1{
+  margin-top: 3rem;
+}
+#aut p{
+margin-left: 3rem;
+}
+.especial-section p{
+  font-family: Lato, sans-serif;
+  margin-left: 3rem;
+  gap: 3rem;
 }
 #autentico{
- padding: 15px;
- top: 20px;
+ top: 2.1rem;
  gap: 4rem;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
-  justify-content: space-evenly;
+flex-direction: row;
+min-width: 320dp;
+width: 100%;
 }
 .contaut{
-  text-align: justify;
-  padding: 10px;
+  flex-direction: row;
   gap: 1rem;
-  font-size: 15px;
+  font-size: 1.1rem;
   font-family: Lato, sans-serif;
-  width: 400px;
-  min-width: 320px;
+  margin: 2rem;
   letter-spacing: 2px;
-  
-  
+  width: 380px;
+  text-align: justify;
 }
 #autentico img{
   border-radius: 50%;
   border: 1px;
   box-shadow: rgba(39, 32, 32, 0.24) 0px 3px 8px;
-  width: 320px;
-  min-width: 320px;
-  margin: auto;
+  min-width: 320dp;
+  margin-left: 4rem;
+  width: 100%;
 }
-#aut{
-  background-color: #E3D6BD;
+#aut-img{
+  flex-direction: column;
+  width: 40%;
+  align-items: center;
 }
+
 
 
 /* Estilos para dispositivos móveis */
 @media (max-width: 768px) {
-    .secao4-div-card {
+    body {
         width: 100%;
     }
 }
