--- a/index.html
+++ b/index.html
@@ -430,13 +430,13 @@ width: 100%;
   border: 1px;
   box-shadow: rgba(39, 32, 32, 0.24) 0px 3px 8px;
   min-width: 320dp;
-  margin-left: 4rem;
   width: 100%;
 }
 #aut-img{
   flex-direction: column;
   width: 40%;
   align-items: center;
+     margin-right: -8rem;
 }
 
 
