--- a/index.html
+++ b/index.html
@@ -435,8 +435,8 @@ width: 100%;
 #aut-img{
   flex-direction: column;
   width: 40%;
-  align-items: center;
-     margin-right: -8rem;
+  
+     margin-left: 4rem;
 }
 
 
