--- a/index.html
+++ b/index.html
@@ -433,10 +433,10 @@ width: 100%;
   width: 100%;
 }
 #aut-img{
-  flex-direction: column;
+  display: flex;
+  flex-wrap: wrap;
   width: 40%;
-  
-     margin-left: 4rem;
+  margin-left: 4rem;
 }
 
 
