--- a/index.html
+++ b/index.html
@@ -407,22 +407,20 @@ margin-left: 4.5rem;
 }
 #autentico{
  top: 2.1rem;
- 
+ gap: 4rem;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
 flex-direction: row;
-
-width: 100%;
 }
 .contaut{
   flex-direction: row;
   gap: 1rem;
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-family: Lato, sans-serif;
-  margin: 2rem;
+  margin: 1.5rem;
   letter-spacing: 2px;
-  width: 380px;
+  width: 60%;
   text-align: justify;
 }
 #autentico img{
@@ -430,13 +428,13 @@ width: 100%;
   border: 1px;
   box-shadow: rgba(39, 32, 32, 0.24) 0px 3px 8px;
   min-width: 320dp;
-  width: 100%;
+  width: 320px;
 }
 #aut-img{
   display: flex;
   flex-wrap: wrap;
   width: 30%;
-  margin-left: 4rem;
+  
 }
 
 
