--- a/index.html
+++ b/index.html
@@ -376,32 +376,27 @@
 #aut{
  background-color: #E3D6BD;
  width: 100%;
- height: 100%;
- gap: 2rem;
+ padding: 20px;
 
 }
 .especial-section{
-  
   display: flex;
-  
   margin-top: 3rem;
   align-items: center;
   min-width: 320dp;
   flex-direction: row;
+  margin-bottom: 4rem;
 }
-
 #aut h1, p{
   font-family: Inter, sans-serif;
-  margin-left: 3rem;
   letter-spacing: 3px;
 }
 #aut h1{
-  margin-top: 3rem;
+  margin-top: 4rem;
+  
 }
 
-
 #autentico{
- top: 2.1rem;
  gap: 4rem;
  display: flex;
  align-items: center;
@@ -411,33 +406,27 @@ flex-direction: row;
 
 }
 .contaut{
-  flex-direction: row;
+  
   gap: 1rem;
   font-size: 1rem;
   font-family: Lato, sans-serif;
   letter-spacing: 2px;
   width: 60%;
   text-align: justify;
-  font-family: Lato, sans-serif;
-  margin-left: 3rem;
+  padding: 18px;
 
 }
 #autentico img{
   border-radius: 50%;
   border: 1px;
   box-shadow: rgba(39, 32, 32, 0.24) 0px 3px 8px;
-  min-width: 320dp;
-  width: 320px;
+  width: 280px;
 }
 #aut-img{
-  display: flex;
-  flex-wrap: wrap;
+  padding: 10px;
   width: 30%;
-  
+ 
 }
-
-
-
 
 /* Estilos para dispositivos móveis */
 @media (max-width: 768px) {
@@ -686,11 +675,11 @@ flex-direction: row;
       
       <section id="aut" >
           <h1 style="font-family: Inter, sans-serif; letter-spacing: 3px;">
-              <string>Conteúdo Autêntico</string>
+              <string style="margin-left: 30px;">Conteúdo Autêntico</string>
              </h1>
-             <p style="padding: 10px; margin-left: 20px; color: #FF9900;">
+             <p style="color: #FF9900; margin-left: 40px;">
               Você sabe o que é?
-              <p>
+             </p>
         <div class="especial-section">
              <div id="autentico" class="col">
               
