--- a/index.html
+++ b/index.html
@@ -406,27 +406,25 @@ flex-direction: row;
 
 }
 .contaut{
-  
+  flex-direction: row;
   gap: 1rem;
   font-size: 1rem;
   font-family: Lato, sans-serif;
   letter-spacing: 2px;
-  width: 60%;
+  width: 50%;
   text-align: justify;
-  padding: 18px;
-
 }
 #autentico img{
   border-radius: 50%;
   border: 1px;
   box-shadow: rgba(39, 32, 32, 0.24) 0px 3px 8px;
-  width: 280px;
+  width: 250px;
 }
 #aut-img{
-  padding: 10px;
+  padding: 5px;
   width: 30%;
- 
 }
+
 
 /* Estilos para dispositivos móveis */
 @media (max-width: 768px) {
