--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
   min-width: 320dp;
   flex-direction: row;
   margin-bottom: 4rem;
+    justify-content: center;
 }
 #aut h1, p{
   font-family: Inter, sans-serif;
