--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
  align-items: center;
  flex-wrap: wrap;
 flex-direction: row;
-
+justify-content: space-evenly;
 
 }
 .contaut{
@@ -414,13 +414,14 @@ flex-direction: row;
   letter-spacing: 2px;
   width: 50%;
   text-align: justify;
-    padding: 10px;
+    padding: 15px;
 }
 #autentico img{
   border-radius: 50%;
   border: 1px;
   box-shadow: rgba(39, 32, 32, 0.24) 0px 3px 8px;
-  width: 150px;
+  width: 100px;
+    
 }
 #aut-img{
   padding: 5px;
